# mri-artefact-detection

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  index.rst  make.bat
src/mri_artefact_detection/: README.md  __init__.py  cli.py
src/mri_artefact_detection/evaluation/: README.md  analysis_utils.py  run_analysis.py  run_ternary_analysis.py
src/mri_artefact_detection/inference/: README.md  inference.py
src/mri_artefact_detection/training/: README.md  model.py  train.py  train_utils.py
tests/: test_analysis_utils.py  test_mri_artefact_detection.py
